Think the Pagination row is looking good as far as spacing with the DVD elements, but still working on getting it to actually work correctly.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -127,9 +127,9 @@ body {
   height: 700px;
 }
 
-.row.main {
+.main {
   overflow-y: scroll;
-  /*height: 550px;*/
+  /*height: 600px;*/
 }
 
 video {
